--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ disableKinds = ["section", "taxonomy", "term"]
 
         # Enable Exif data in the gallery.
         # See https://gohugo.io/content-management/image-processing/#exif-data for how to filter tags.
-        enable_exif = true
+        enable_exif = false
 
         # Optional watermark file for the large images.
         [params.gallerydeluxe.watermark]
